--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ name: Docker Deploy
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -40,6 +40,6 @@ jobs:
           script: |
             echo ${{ secrets.PAT_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ghcr.io/${{ github.repository }}:latest
-            docker stop daviddong || true
-            docker rm daviddong || true
-            docker run -d --name daviddong -p 4321:4321 ghcr.io/${{ github.repository }}:latest
+            docker stop daviddong.me || true
+            docker rm daviddong.me || true
+            docker run -d --name daviddong.me -p 4321:4321 ghcr.io/${{ github.repository }}:latest
