--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.0.2",
-    "astro": "^5.2.3"
+    "@fontsource/lxgw-wenkai": "^5.1.0",
+    "@tailwindcss/vite": "^4.0.5",
+    "astro": "^5.2.3",
+    "tailwindcss": "^4.0.5"
   }
 }
