--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.0.2",
     "@tailwindcss/vite": "^4.0.5",
     "astro": "^5.2.3",
+    "astro-embed": "^0.9.0",
     "tailwindcss": "^4.0.5"
   }
 }
