feat: render mermaid

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/node": "^9.2.2",
     "@tailwindcss/vite": "^4.0.5",
     "astro": "^5.8.0",
+    "playwright": "^1.54.1",
+    "rehype-mermaid": "^3.0.0",
     "tailwindcss": "^4.0.5"
   }
 }
